Fix asset paths

--- a/_templates/default.html
+++ b/_templates/default.html
@@ -9,8 +9,8 @@
 
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/global.css">
-    <script src="{{ site.baseurl }}/assets/scripts/modernizr.min.js"></script>
+    <link rel="stylesheet" href="{{ site.baseurl }}/pagestest/css/global.css">
+    <script src="{{ site.baseurl }}/pagestest/assets/scripts/modernizr.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto">
   </head>
@@ -20,7 +20,7 @@
     {{ content }}
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="{{ site.baseurl }}/assets/scripts/jquery.matchheight.js"></script>
-  <script src="{{ site.baseurl }}/assets/scripts/picturefill.min.js" async></script>
+  <script src="{{ site.baseurl }}/pagestest/assets/scripts/jquery.matchheight.js"></script>
+  <script src="{{ site.baseurl }}/pagestest/assets/scripts/picturefill.min.js" async></script>
   </body>
 </html>
