--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@ bodyclass: page-home
       height="500" width="405"
     >
     <h2>What we do</h2>
-    <p>Just putting some dummy text in here for a minute, mostly to leave space for a new image which will come in in the next edit. Watch this space.</p>
+    <p>
+	Just putting some dummy text in here for a minute, mostly to leave space for a new image which will come in in the next edit. Watch this space.
+	<br />
+	<img src="{{ site.baseurl }}/pagestest/assets/blog/themediashow.png" />
+    </p>
   </div>
 </div>
 
