--- a/_templates/default.html
+++ b/_templates/default.html
@@ -4,6 +4,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="robots" content="noindex">
 
     <title>{{ page.title }} &ndash; pages scratchpad</title>
 
